--- a/css/addt-styles.css
+++ b/css/addt-styles.css
@@ -2,7 +2,8 @@
     background: rgb(102, 136, 158);
     display: block;
     margin: 0 auto;
-    width: 400px;
+    width: 600px;
+    
 }
 h1{
     margin-top: 0;
@@ -14,4 +15,17 @@ h1{
 th{
     text-align: left;
     padding-top: 10px;
+}
+.caja{
+    padding-left: 30px
+}
+#input-otro{
+    display: none;
+    margin-left: 5px;
+
+}
+#input-mascota{
+    display: none;
+    margin-left: 5px;
+    
 }
