--- a/css/landing-styles.css
+++ b/css/landing-styles.css
@@ -1,3 +1,10 @@
 body{
     margin: 0;
 }
+.main h1{
+    font-family: "Lobster",  cursive;
+    font-size:  150px;
+    margin: 30px 40px;
+    color: brown;
+    text-align: center;
+}
